syntax = "proto3";

package hashicorp.consul.hcp.v1;

import "pbresource/annotations.proto";

message TelemetryState {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_CLUSTER};

  string resource_id = 1;
  string client_id = 2;
  string client_secret = 3;
  string endpoint = 4;
  map<string,string> labels = 5;
  MetricsState metrics = 6;
  
  // Auth Endpoint is the endpoint against which client id and secret are exchanged for tokens
  // to call the API. In all cases, except development, this is https://auth.idp.hashicorp.com.
  string auth_endpoint = 7;
}

message MetricsState {
  string endpoint = 1;
  repeated string include_list = 2;
  bool disabled = 3;
}
